--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   lottie: ^2.0.0
   gesture_x_detector: ^1.1.1
   swipeable_button_view: ^0.0.2
-  url_launcher: ^6.2.1
+  url_launcher: ^6.1.4
   flutter_phone_direct_caller: ^2.1.1
 
 
@@ -45,7 +45,6 @@ dependencies:
   get: ^4.6.5
   porcupine_flutter: ^3.0.0
   circular_countdown_timer: ^0.2.3
-  url_launcher: ^6.1.14
   android_intent: ^2.0.2
   package_info: ^2.0.2
 
@@ -75,6 +74,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/profilephoto/
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
